# AEM_Transport-mod_multi

./: .gitignore  AEM_testing.key  README.md  pyproject.toml  requirements.txt  simulation_config.json
old/: AEM_model_general_implementation.py  Two_Sources_vectorized_parallel.py  mathieu_functions_OG.py
src/: One_Source_vectorized_parallel.py  Two Sources Vectorized Parallel.py  at_config.py  at_element.py  at_element_OG.py  at_findalpha_t.py  at_simulation.py  concentration_stats.txt  input_values.txt  main.py  main_findalpha.py  mathieu_functions_OG.py  simulation_config.json
src/Results/: concentration_stats_2-elements_7-terms_oxygen-no_inc-0.5.txt  concentration_stats_2-elements_7-terms_oxygen-no_inc-1.0(1).txt  concentration_stats_2-elements_7-terms_oxygen-no_inc-1.0.txt  concentration_stats_2-elements_7-terms_oxygen-no_inc-2.0(1).txt  concentration_stats_2-elements_7-terms_oxygen-no_inc-2.0.txt  concentration_stats_2-elements_7-terms_oxygen-yes_inc-0.5.txt  concentration_stats_2-elements_7-terms_oxygen-yes_inc-1.0.txt  concentration_stats_3-elements_7-terms_oxygen-no_inc-0.5.txt  concentration_stats_3-elements_7-terms_oxygen-no_inc-1.0.txt  concentration_stats_3-elements_7-terms_oxygen-no_inc-2(1).txt  concentration_stats_3-elements_7-terms_oxygen-no_inc-2.txt  concentration_stats_3-elements_7-terms_oxygen-yes_inc-0.5(1).txt  concentration_stats_3-elements_7-terms_oxygen-yes_inc-0.5.txt  concentration_stats_3-elements_7-terms_oxygen-yes_inc-2.0.txt  run_0001_stats_1-elements_7-terms_acceptor-no_inc-0.5.txt  (+1 more)
tests/: check_all.sh
(+1 files in other folders)
