[project]
version = "0.1"
name = "AEMTransport"
dependencies = [
    "numpy >= 1.26.4"
    "matplotlib >= 3.9.2"
]
requires-python = ">= 3.12"
readme = "README.md"
description = "Simulation of AEM transport."
maintainers = [
  {name = "Willi Kappler", email = "grandor@gmx.de"}
]
authors = [
  {name = "Willi Kappler", email = "grandor@gmx.de"},
]
keywords = ["data", "science", "simulation", "aem"]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/willi-kappler/AEM_Transport"

